--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.2",
     "license": "MIT",
     "private": true,
+    "type": "module",
     "dependencies": {
         "@discordjs/opus": "^0.1.0",
         "discord.js": "^12.0.2",
